--- a/app/assets/stylesheets/option.css.scss
+++ b/app/assets/stylesheets/option.css.scss
@@ -2,14 +2,8 @@
   margin-top: 10px;
 }
 
-#cssmenu a {
-font-size: 17px;
-color: black;
-text-decoration: none;
-}
 
-
-.buttons{
+.buttons {
   position: relative;
   margin-left: auto;
   margin-right: auto;
@@ -28,3 +22,46 @@ text-decoration: none;
   z-index: -100;
   opacity: 0.5;
 }
+
+
+
+.buttons-option a {
+  cursor: pointer;
+  color: black;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 600;
+  position: relative;
+  display: block;
+  vertical-align: baseline;
+  font-size: 20px;
+  margin-top: 80px;
+  text-align: center;
+  display: block;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.buttons-option a:hover {
+  color: red;
+}
+
+.question {
+  padding-top: 20px;
+  text-align: center;
+  font-size: 50px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.cash-button-option a {
+ 
+
+}
+.shopping-button-option a {
+
+}
+
+.dashboard-button-option a {
+ 
+}
+
